<resources>
    <string name="app_name">Yaho</string>
    <string name="naver_maps_client_id">7abca5361m</string>
    <string name="admob_app_id">ca-app-pub-6775338233067833~2342517066</string>
    <string name="admob_banner_unit_id">ca-app-pub-6775338233067833/4529696705</string>
    <string name="admob_full_screen_unit_id">ca-app-pub-6775338233067833/7735791694</string>

    <!--unit-->
    <string name="kilo_meter_unit">%.2fkm</string>
    <string name="meter_unit">%.2fm</string>
    <string name="count_unit">%d회</string>
    <string name="speed_unit">%.2fm/s</string>
    <string name="kcal_unit">%.2fkcal</string>

    <!--login-->
    <string name="login_title">번호 인증</string>
    <string name="login_sub_title">추후 데이터 저장을 위해\n번호를 인증해주세요.</string>
    <string name="login_phone_number">휴대전화번호</string>
    <string name="login_phone_code_btn">인증번호 받기</string>
    <string name="login_phone_code">인증번호</string>
    <string name="login_code_check">인증번호를 다시 확인해주세요.</string>
    <string name="login_private_policy">번호인증 완료 시, \n<u>개인정보처리방침</u>에 동의한 것으로 간주합니다.</string>

    <!--home-->
    <string name="home_all_height_title">내가 오른 높이</string>
    <string name="home_all_climb_count">나의 등산</string>
    <string name="dialog_app_location_confirm">\'야호\' 앱은\n아래 기능 활성화를 위해 사용자의 위치 데이터를 수집합니다.\n-주변 산 조회\n-등산할 산 선택 화면\n-실시간 등산 기록
        \n\n실시간 등산 기록 기능이 활성화된 경우,\n앱이 닫혀있어도 백그라운드에서 사용자의 위치 정보를 수집합니다.\n수집된 위치 정보는 오직 등산 기록을 표시하기 위해서만 사용됩니다.</string>
    <string name="dialog_app_location_confirm_btn">동의하고 시작하기</string>

    <string name="home_menu_start_climbing">바로 등산하기</string>
    <string name="home_menu_my_climbs">나의 등산 기록</string>
    <string name="home_menu_remove_ads"><u>계속 뜨는 광고가 거슬리시나요?</u></string>
    <string name="home_menu_btn_go_my_climbs">보러가기</string>
    <string name="home_menu_btn_remove_ads">제거하기</string>
    <string name="home_menu_btn_remove_ads_done">제거완료</string>
    <string name="remove_ads_popup_title">계속 뜨는 광고가\n불편하신가요?</string>
    <string name="remove_ads_popup_sub_title">광고를 제거하고 편하게 등산하세요!</string>
    <string name="remove_ads_popup_button">광고 제거하기</string>
    <string name="remove_ads_popup_no_more_today"><u>오늘 더 이상 보지 않기</u></string>

    <!--ready-->
    <string name="ready_near_mountain_title">지금 어떤 산을\n오르시나요?</string>
    <string name="ready_near_mountain_message">주변에 이런 산들이 있어요.</string>
    <string name="ready_near_mountain_height">정상까지 높이</string>
    <string name="ready_near_level">난이도</string>
    <string name="ready_to_start_title">%s 정복을\n시작합니다!</string>
    <string name="ready_near_mountain_not_found">근처에 오를 산이 없어요ㅠㅠ</string>
    <string name="count_down_mountain_name">오늘 정복할 산은</string>
    <string name="count_down_mountain_visit_count">나의 도전</string>
    <string name="count_down_warning_message">앱을 강제 종료하면 기록이 날아가요.</string>
    <string name="permission_denied_explanation">권한이 거부되었지만 핵심 기능에 필요합니다.</string>
    <string name="settings">Settings</string>
    <string name="launch_activity">화면에서 보기</string>
    <string name="remove_location_updates">등산 관두기</string>
    <string name="noti_title_climbing">야호! %1$s 등산 중</string>
    <string name="noti_text_message">%s부터 오르기 시작</string>
    <string name="noti_title_resting">숨 고르는 중</string>

    <!--climbing-->
    <string name="live_climbing_distance_title">거리</string>
    <string name="live_climbing_height_title">고도</string>
    <string name="live_climbing_btn_done">등산 종료</string>
    <string name="live_climbing_rest_title">동안 쉬는 중</string>
    <string name="dialog_climbing_done_title">즐거운 등산 되셨나요?</string>
    <string name="dialog_climbing_done_message">오늘 하루 건강을 위해\n%s 투자했어요!</string>
    <string name="dialog_climbing_done_cancel"><u>아직 더 내려가야해요.</u></string>

    <!--climbing done-->
    <string name="dialog_save_need_connect_network">등산 기록을 저장합니다.\n네트워크 연결 상태를 확인해주세요</string>
    <string name="climbing_save_done">야~~호~~</string>

    <!--climbing detail-->
    <string name="climbing_detail_toolbar_title">%s 상세 기록</string>
    <string name="climbing_detail_mountain_name">%s으로 %d번째 등산</string>
    <string name="climbing_detail_path_title">구간 분석</string>
    <string name="climbing_detail_info_title">상세 분석</string>
    <string name="climbing_detail_info_time_title">시간</string>
    <string name="climbing_detail_info_total_time_title">전체 시간</string>
    <string name="climbing_detail_info_climbing_time_title">운동 시간</string>
    <string name="climbing_detail_info_rest_time_title">휴식 시간</string>
    <string name="climbing_detail_info_distance_title">거리</string>
    <string name="climbing_detail_info_move_distance_title">이동 거리</string>
    <string name="climbing_detail_info_speed_title">속도</string>
    <string name="climbing_detail_info_average_speed_title">평균 속도</string>
    <string name="climbing_detail_info_max_speed_title">최고 속도</string>
    <string name="climbing_detail_info_height_title">고도</string>
    <string name="climbing_detail_info_start_height_title">시작 고도</string>
    <string name="climbing_detail_info_max_height_title">최고 고도</string>

    <string name="climbing_detail_info_section_start_time_title">등산 시작</string>
    <string name="climbing_detail_info_section_rest_title">휴식</string>
    <string name="climbing_detail_info_section_end_time_title">등산 종료</string>

    <!--climbing record-->
    <string name="climbing_record_list_title">나의 등산 기록</string>
    <string name="climbing_record_select_all">전체</string>
    <string name="climbing_record_delete_done">등산 데이터가 삭제되었습니다.</string>
</resources>